<resources>
    <string name="app_name">ebn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_share">icon share</string>
    <string name="icon_heart">icon heart</string>
    <string name="icon_coin">icon coin</string>
    <string name="icon_add_to_cart">icon add-to-cart</string>
    <string name="icon_notification">icon notification</string>
</resources>